ex03 solved with padding=0 and align-items

--- a/week06/day03/ex02style.css
+++ b/week06/day03/ex02style.css
@@ -1,6 +1,4 @@
 .container {
-  display: flex;
-  background-color: #ffd62a;
   width: 760px;
   height: 280px;
   justify-content: center;
@@ -11,7 +9,12 @@
   width: 110px;
   height: 110px;
   background-color: #b02aff;
-  justify-content: center;
-  align-items: center;
+  z-index: 1;
+}
+
+.yellow {
+  background-color: #ffd62a;
+  width: auto;
+  height: auto;
 
 }
